--- a/runtime/src/main/resources/META-INF/native-image/org.github.keking/quarkus-dubbo-rpc/resource-config.json
+++ b/runtime/src/main/resources/META-INF/native-image/org.github.keking/quarkus-dubbo-rpc/resource-config.json
@@ -5,6 +5,8 @@
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.common.context.FrameworkExt\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.common.extension.ExtensionFactory\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.common.infra.InfraAdapter\\E"}, 
+    {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.common.serialize.Serialization\\E"}, 
+    {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.common.serialize.hessian2.dubbo.Hessian2FactoryInitializer\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.common.threadpool.ThreadPool\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.common.threadpool.manager.ExecutorRepository\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.event.EventDispatcher\\E"}, 
@@ -12,6 +14,7 @@
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.metadata.MetadataServiceExporter\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.metadata.ServiceNameMapping\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.metadata.WritableMetadataService\\E"}, 
+    {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.metadata.definition.builder.TypeBuilder\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.monitor.MonitorFactory\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.registry.RegistryFactory\\E"}, 
     {"pattern":"\\QMETA-INF/dubbo/internal/org.apache.dubbo.remoting.Codec2\\E"}, 
@@ -43,6 +46,7 @@
     {"pattern":"\\Qjava/util/List.class\\E"}, 
     {"pattern":"\\Qjava/util/Map.class\\E"}, 
     {"pattern":"\\Qjava/util/concurrent/Executor.class\\E"}, 
+    {"pattern":"\\Qnacos-version.txt\\E"}, 
     {"pattern":"\\Qorg/apache/dubbo/common/Node.class\\E"}, 
     {"pattern":"\\Qorg/apache/dubbo/common/URL.class\\E"}, 
     {"pattern":"\\Qorg/apache/dubbo/common/Version.class\\E"}, 
